--- a/assets/action-creator-error.example
+++ b/assets/action-creator-error.example
@@ -1,6 +1,6 @@
 function searchError(error) {
   return {
-    type:    'SEARCH_ERROR',
+    type:    SEARCH_ERROR,
     error:   true,
     payload: error,
   };
