--- a/assets/redux-thunk.example
+++ b/assets/redux-thunk.example
@@ -5,7 +5,7 @@ const wp = new WP({ endpoint: '...' });
 export function searchThunk(query) {
   return async function (dispatch) {
     try {
-      dispatch({ type: SEARCH_REQUEST, payload: query });
+      dispatch({ type: SEARCH_REQUEST, payload: { query } });
       const results = await wp.posts().search(query);
       dispatch({ type: SEARCH_SUCCESS, payload: results });
     } catch (error) {
