--- a/assets/redux-saga.example
+++ b/assets/redux-saga.example
@@ -2,21 +2,21 @@ import { takeLatest } from 'redux-saga';
 import { call, put } from 'redux-saga/effects';
 import WP from 'wordpress-rest-api';
 
-const wp = new WP({ endpoint: '...' });
+const wp = new WP({...});
 
 export function* searchSagaWorker(action) {
     try {
       const results = yield call(wp.posts().search, action.payload.query);
-      yield put({ type: SEARCH_SUCCESS, payload: results });
+      yield put({ type: 'SEARCH_SUCCESS', payload: results });
     } catch (error) {
-      yield put({ type: SEARCH_ERROR, payload: error, error: true });
+      yield put({ type: 'SEARCH_ERROR', payload: error, error: true });
     }
   }
 }
 
 function* searchSaga() {
-  yield* takeLatest(SEARCH_REQUEST, searchSagaWorker);
+  yield* takeLatest('SEARCH_REQUEST', searchSagaWorker);
 }
 
 // COMPONENTS BE LIKE:
-dispatch({ type: SEARCH_REQUEST, payload: { query: 'foo' } });
+dispatch({ type: 'SEARCH_REQUEST', payload: { query: '...' } });
