Minor example changes

--- a/assets/action-creator-success.example
+++ b/assets/action-creator-success.example
@@ -1,7 +1,7 @@
 function searchSuccessAction(results) {
   return {
     type:    'SEARCH_SUCCESS',
-    payload: results,
+    payload: { results },
     error:   false,
   };
 }
