--- a/assets/reducer.example
+++ b/assets/reducer.example
@@ -6,7 +6,7 @@ function searchReducer(state = initialState, action) {
       return Object.assign({}, state, { isLoading: true, query: action.payload.query });
 
     case 'SEARCH_SUCCESS':
-      return Object.assign({}, state, { isLoading: false, results: action.payload });
+      return Object.assign({}, state, { isLoading: false, results: action.payload.results });
 
     case 'SEARCH_ERROR':
       return Object.assign({}, state, { isLoading: false, results: [] });
