--- a/assets/redux-thunk.example
+++ b/assets/redux-thunk.example
@@ -7,7 +7,7 @@ export function searchThunk(query) {
     try {
       dispatch({ type: 'SEARCH_REQUEST', payload: { query } });
       const results = await wp.posts().search(query);
-      dispatch({ type: 'SEARCH_SUCCESS', payload: results });
+      dispatch({ type: 'SEARCH_SUCCESS', payload: { results } });
     } catch (error) {
       dispatch({ type: 'SEARCH_ERROR', payload: error, error: true });
     }
