Dumb vs smart components, lifecycle

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,25 @@
----
-"extends":
-  - "eslint-config-defaults/configurations/walmart/es6-react"
-
-"rules":
-  "indent": [2, 2, {"SwitchCase": 1}]
-  "max-len": 0
-
-"env":
-  "browser": true,
-  "node": true
+{
+  "preset": "airbnb",
+  "ecmaFeatures": {
+    "jsx": true,
+    "modules": true
+  },
+  "env": {
+    "browser": true,
+    "node": false
+  },
+  "parser": "babel-eslint",
+  "rules": {
+    "no-unused-vars": [2, { "vars": "all", "args": "after-used" }],
+    "quotes": [2, "single"],
+    "strict": [2, "never"],
+    "no-unexpected-multiline": 2,
+    "react/jsx-uses-react": 2,
+    "react/jsx-uses-vars": 2,
+    "react/react-in-jsx-scope": 2
+  },
+  "plugins": [
+    "babel",
+    "react"
+  ]
+}
