--- a/package.json
+++ b/package.json
@@ -32,10 +32,11 @@
     "babel-preset-stage-0": "^6.3.13",
     "cross-env": "^1.0.7",
     "css-loader": "^0.23.0",
-    "eslint": "^1.8.0",
+    "eslint": "^1.10.3",
     "eslint-config-defaults": "^7.1.1",
+    "eslint-plugin-babel": "^3.2.0",
     "eslint-plugin-filenames": "^0.1.2",
-    "eslint-plugin-react": "^3.6.3",
+    "eslint-plugin-react": "^3.16.1",
     "express": "^4.13.3",
     "file-loader": "^0.8.4",
     "html-loader": "^0.4.0",
