--- a/assets/immutable-after.example
+++ b/assets/immutable-after.example
@@ -1,7 +1,7 @@
 import React from 'react';
 import shallowCompare from 'react-addons-shallow-compare';
 
-const MyComponent = React.createClass({
+const X = React.createClass({
   shouldComponentUpdate(nextProps, nextState) {
     // With immutable objects, you only
     // need to compare objects shallowly:
