--- a/assets/immutable-before.example
+++ b/assets/immutable-before.example
@@ -1,7 +1,7 @@
 import React from 'react';
 import deepEqual from 'deep-equal';
 
-const MyComponent = React.createClass({
+const X = React.createClass({
   shouldComponentUpdate(nextProps, nextState) {
     // With big state objects, performing
     // deep comparisons will slow you down:
